--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -99,10 +99,16 @@ jobs:
         shell: bash
 
   update_dependency_graph:
-    needs: acceptance_tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+  needs: acceptance_tests
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      
+    - name: Change to Project Directory
+      run: |
+        cd financial-management-system
+        mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+
 
 
