--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -7,90 +7,66 @@ on:
     branches: [ "main" ]
 
 jobs:
-  compile:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+  build:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
+      
       - name: Compile Application
         run: |
           echo "Compiling the application..."
           mvn clean compile
         shell: bash
 
-  package:
-    needs: compile
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+      
+      - name: Check Dependencies
+        run: |
+          echo "Checking dependencies..."
+          mvn dependency:resolve
+        shell: bash
+
+      
       - name: Package Application
         run: |
           echo "Packaging the application..."
           mvn package -DskipTests
         shell: bash
-      - name: Upload JAR file
-        uses: actions/upload-artifact@v3
-        with:
-          name: jar-file
-          path: target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar
 
-  acceptance_tests:
-    needs: package
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Download JAR file
-        uses: actions/download-artifact@v3
-        with:
-          name: jar-file
-          path: target/
-      - name: List target directory
-        run: |
-          echo "Listing target directory..."
-          ls -la target/
-        shell: bash
+      
       - name: Start Server
-        if: runner.os == 'Linux'
         run: |
           echo "Starting the server..."
           nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
           SERVER_PID=$!
-          sleep 30
+          sleep 5
         shell: bash
 
+
+      - name: Run Unit Tests
+        run: |
+          echo "Running unit tests..."
+          mvn test
+        shell: bash
+
+      
       - name: Run Acceptance Tests
         run: |
           echo "Running acceptance tests..."
           mvn verify
         shell: bash
+
+      
       - name: Stop Server
-        if: runner.os == 'Linux'
         run: |
           echo "Stopping the server..."
           if [ -n "$SERVER_PID" ]; then
@@ -98,14 +74,4 @@ jobs:
           fi
         shell: bash
 
-  update_dependency_graph:
-    needs: acceptance_tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        
-      - name: Change to Project Directory
-        run: |
-          cd financial-management-system
-          mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
+      
