--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -7,71 +7,113 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  compile:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-
-      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-
-      
       - name: Compile Application
         run: |
           echo "Compiling the application..."
           mvn clean compile
         shell: bash
 
-      
-      - name: Check Dependencies
-        run: |
-          echo "Checking dependencies..."
-          mvn dependency:resolve
-        shell: bash
-
-      
-      - name: Package Application
-        run: |
-          echo "Packaging the application..."
-          mvn package -DskipTests
-        shell: bash
-
-      
-      - name: Start Server
-        run: |
-          echo "Starting the server..."
-          nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
-          SERVER_PID=$!
-          sleep 5
-        shell: bash
-
-
+  unit_tests:
+    needs: compile
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
       - name: Run Unit Tests
         run: |
           echo "Running unit tests..."
           mvn test
         shell: bash
 
-      
+  package:
+    needs: unit_tests
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Package Application
+        run: |
+          echo "Packaging the application..."
+          mvn package -DskipTests
+        shell: bash
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v3
+        with:
+          name: jar-file
+          path: target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar
+
+  acceptance_tests:
+    needs: package
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Download JAR file
+        uses: actions/download-artifact@v3
+        with:
+          name: jar-file
+          path: target/
+      - name: List target directory
+        run: |
+          echo "Listing target directory..."
+          ls -la target/
+        shell: bash
+      - name: Start Server
+        if: runner.os == 'Linux'
+        run: |
+          echo "Starting the server..."
+          nohup java -jar target/financial-management-system-1.0-SNAPSHOT-jar-with-dependencies.jar &
+          SERVER_PID=$!
+          sleep 30
+        shell: bash
+
       - name: Run Acceptance Tests
         run: |
           echo "Running acceptance tests..."
           mvn verify
         shell: bash
-
-      
       - name: Stop Server
+        if: runner.os == 'Linux'
         run: |
           echo "Stopping the server..."
           if [ -n "$SERVER_PID" ]; then
             kill $SERVER_PID
           fi
         shell: bash
-
-      
