--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- EoD SQL for database interaction -->
         <dependency>
             <groupId>net.lemnik</groupId>
             <artifactId>eodsql</artifactId>
@@ -127,6 +128,29 @@
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Maven Install Plugin to install eodsql.jar -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>install-eodsql</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <file>${project.basedir}/lib/eodsql.jar</file>
+                            <groupId>net.lemnik</groupId>
+                            <artifactId>eodsql</artifactId>
+                            <version>2.2</version>
+                            <packaging>jar</packaging>
                         </configuration>
                     </execution>
                 </executions>
