--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -152,7 +152,7 @@ jobs:
       - name: Install eodsql JAR
         run: |
           mvn install:install-file \
-              -Dfile=lib/eodsql-2.2.jar \
+              -Dfile=lib/eodsql.jar \
               -DgroupId=net.lemnik \
               -DartifactId=eodsql \
               -Dversion=2.2 \
