--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
+        </dependency>
+
         <!-- Unirest for HTTP requests -->
         <dependency>
             <groupId>com.konghq</groupId>
